Closed Bug 1129686 Opened 11 years ago Closed 11 years ago

Reftest test/build/tests/reftest/tests/image/test/reftest/pngsuite-ancillary/ccwn3p08.png Fails with vsync refresh driver on os x

Categories

(Core :: Graphics: Color Management, defect, P2)

37 Branch
ARM
All
defect

Tracking

()

RESOLVED FIXED
mozilla38
Tracking Status
firefox38 --- fixed

People

(Reporter: mchang, Assigned: jerry)

References

()

Details

Attachments

(2 files)

From https://treeherder.mozilla.org/#/jobs?repo=try&revision=aa36f268dd4e file:///builds/slave/talos-slave/test/build/tests/reftest/tests/image/test/reftest/pngsuite-ancillary/ccwn3p08.png | image comparison (==), max difference: 8, number of differing pixels: 577 This only occurs with the silk refresh driver enabled on OSX. Mochitests all passed with the compositor.
Summary: file:///builds/slave/talos-slave/test/build/tests/reftest/tests/image/test/reftest/pngsuite-ancillary/ccwn3p08.png | image comparison (==), max difference: 8, number of differing pixels: 577 Fails with vsync refresh driver on os x → Reftest test/build/tests/reftest/tests/image/test/reftest/pngsuite-ancillary/ccwn3p08.png Fails with vsync refresh driver on os x
In reftest-cmdline.js, we will set the following pref[1]. With silk, we might got the wrong value since we init the gfxPlatform at very early stage. With silk: 1) init gfxPlatform at [2] 2) get "gfx.color_management.force_srgb" at [3], and we got false here. 3) set "gfx.color_management.force_srgb" to true in [1], but we don't update the profiler to system. [1] in reftest-cmdline.js branch.setBoolPref("gfx.color_management.force_srgb", true); [2] https://hg.mozilla.org/mozilla-central/annotate/58ce6051edf5/layout/base/nsRefreshDriver.cpp#l291 [3] https://hg.mozilla.org/mozilla-central/annotate/58ce6051edf5/gfx/thebes/gfxPlatform.cpp#l1854
Assignee: mchang → hshih
> 3) set "gfx.color_management.force_srgb" to true in [1], but we don't update the profiler to system. s/profiler/profile
Attachment #8560335 - Flags: review?(vladimir)
See Also: → 856452
Nice find!
The image mentioned in the initial report (image/test/reftest/pngsuite-ancillary/ccwn3p08.png) has a gAMA chunk with gamma=1.0 so it should not be surprising that the image is rendered differently if it's forced to be interpreted as sRGB.
See Also: → 1130681
See Also: → 1130680
Bobby, could you help to review the attachment 8560335 [details] [diff] [review] patch? It is related to the color management. When we change the "gfx.color_management.force_srgb", we just call ShutdownCMS(), but we don't call CreateCMSOutputProfile() to update the new pref value.
Flags: needinfo?(bobbyholley)
Component: Graphics → GFX: Color Management
Attachment #8560335 - Flags: review?(bobbyholley)
Comment on attachment 8560335 [details] [diff] [review] Update cms profile in SRGBOverrideObserver callback. v1 Review of attachment 8560335 [details] [diff] [review]: ----------------------------------------------------------------- Jeff owns color management now.
Attachment #8560335 - Flags: review?(vladimir)
Attachment #8560335 - Flags: review?(jmuizelaar)
Attachment #8560335 - Flags: review?(bobbyholley)
Flags: needinfo?(bobbyholley)
Attachment #8560335 - Flags: review?(jmuizelaar) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Comment on attachment 8563915 [details] [diff] [review] fix friend class declaration. v1, r=jmuizelaar Got r+ from :jrmuizel for this trivial fix.
Attachment #8563915 - Flags: review?(jmuizelaar) → review+
Attachment #8563915 - Attachment description: fix friend class declaration. v1 → fix friend class declaration. v1, r=jmuizelaar
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: