Bug 1129686 - Update cms profile in SRGBOverrideObserver callback. r=jmuizelaar

--HG--
extra : rebase_source : 9fc25be48d86379004ed4fda37c8a9eaf81409ed